--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "django-stubs>=5.2.2",
     "phonenumbers>=9.0.12",
     "django-axes>=8.0.0",
+    "redis>=6.4.0",
+    "django-redis>=6.0.0",
 ]
 
 [project.optional-dependencies]
